--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message Form</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="styles.css"> <!-- Optional: Link to external CSS file -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -56,7 +56,7 @@
 
 <div class="container">
     <h2>Send Us a Message</h2>
-    <form action="index.php" method="POST">
+    <form action="index.php" method="GET"> <!-- Change method to GET -->
         <div class="form-group">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -74,5 +74,4 @@
 </div>
 
 </body>
-
 </html>
